fix overflow, sizing, spacing

--- a/src/assets/styles/be-your-own.scss
+++ b/src/assets/styles/be-your-own.scss
@@ -38,15 +38,12 @@
   #be-your-own {
     --size: 2rem;
   }
-  #ticker {
-    height: 32vh !important;
-
-  }
-
-  a {
+  #be-your-own a {
     margin-bottom: 4rem !important;
   }
-
+  #ticker {
+    height: 32vh !important;
+  }
   .service__image {
     width: 10rem !important;
   }
